# Meridian

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  index.html
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml  pages.yml
api/: Dockerfile  pyproject.toml
api/meridian_api/: baselines.py  main.py  scenarios.py  settings.py  signals.py  timeseries.py
api/tests/: test_api.py  test_baselines.py  test_scenarios_crud.py  test_signals.py  test_timeseries.py
assets/: api-DskbyBLL.js  index-BXF4_938.css  index-COSsQzX8.js
docs/: ARCHITECTURE.md  DATA_SOURCES.md  FCM_DESIGN.md  HOSTING.md  LIVE_DATA.md  PORTWATCH_FIELDS.md  ROADMAP.md
engine/: pyproject.toml
engine/meridian_engine/: __init__.py  fcm.py  models.py  network.py  scenario.py  seed.py
engine/meridian_engine/data/: synthetic_seed_v0.json
engine/meridian_engine/maps/: macro_v0.json
engine/tests/: test_fcm.py  test_guards.py  test_network.py  test_scenario.py  test_scenario_v2.py
infra/db/: init.sql
infra/oci/: DEPLOY.md
ingestion/: Dockerfile  pyproject.toml
ingestion/meridian_ingest/: chokepoints_seed.json  comtrade.py  db.py  gdelt.py  hazards.py  portwatch.py  run_all.py  scheduler.py  settings.py  verify_endpoints.py
ingestion/tests/: conftest.py  test_comtrade.py  test_gdelt.py  test_hazards.py  test_portwatch.py  test_verify_endpoints.py
ingestion/tests/fixtures/: chokepoints_page.json  gdacs_rss.xml  ports_page.json  usgs_feed.json
tools/: gen_demo_data.py
web/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: Advisor.tsx  App.tsx  Builder.roundtrip.test.ts  Builder.tsx  Dashboard.tsx  FcmCanvas.tsx  MapView.tsx  Monitoring.tsx  Panel.tsx  advisor.ts  api.ts  charts.tsx  format.ts  main.tsx  report.ts  styles.css
web/src/demo/: api.ts  engine.parity.test.ts  engine.ts
web/src/demo/data/: baseline.json  fcm.json  parity_cases.json  series.json
