[project]
name = "meridian-ingest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27", "tenacity>=8.2", "apscheduler>=3.10",
  "pydantic-settings>=2.2", "psycopg[binary]>=3.1", "python-dotenv>=1.0",
]
[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "respx>=0.21"]
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
